# ProSA-Hyper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
examples/: client.rs  config.yml  mcp-client.rs  mcp.rs  server.rs  server.yml
examples/common/: calculator.rs  mod.rs
src/: client.rs  lib.rs  server.rs  tests.rs
src/client/: adaptor.rs  proc.rs  socket.rs
src/server/: adaptor.rs  proc.rs  service.rs
src/server/mcp/: adaptor.rs  mod.rs  proc.rs
