[package]
name = "prosa-hyper"
version = "0.1.0"
authors = ["Jérémy HERGAULT <jeremy.hergault@worldline.com>", "Anthony THOMAS <anthony.thomas@worldline.com>", "Julien TERUEL <julien.teruel@worldline.com>", "Rene-Louis EYMARD <rene-louis.eymard@worldline.com>"]
description = "ProSA Hyper processor for HTTP client/server"
homepage = "https://worldline.com/"
repository = "https://github.com/worldline/ProSA-Hyper"
edition = "2024"
license = "LGPL-3.0-or-later"

[[example]]
name = "server"

[package.metadata.prosa.hyper_srv]
proc = "server::proc::HyperServerProc"
settings = "server::proc::HyperServerSettings"
adaptor = ["server::adaptor::HelloHyperServerAdaptor"]

[dependencies]
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread"] }
tracing = "0.1"
prosa-utils = "0.2"
prosa = "0.2"
aquamarine = "0.6"
url = { version = "2", features = ["serde"] }

opentelemetry = { version = "0.24", features = ["metrics", "trace", "logs"] }

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
openssl = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"] }
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml", "json5", "convert-case", "async"] }
clap = "4"
