[package]
name = "prosa-hyper"
version = "0.3.1"
authors = ["Jérémy HERGAULT <jeremy.hergault@worldline.com>", "Anthony THOMAS <anthony.thomas@worldline.com>", "Julien TERUEL <julien.teruel@worldline.com>", "Rene-Louis EYMARD <rene-louis.eymard@worldline.com>"]
description = "ProSA Hyper processor for HTTP client/server"
homepage = "https://worldline.com/"
repository = "https://github.com/worldline/ProSA-Hyper"
edition = "2024"
license = "LGPL-3.0-or-later"

[features]
default = ["client"]
server = []
client = []

[[example]]
name = "server"
required-features = ["server"]

[[example]]
name = "client"
required-features = ["client"]

[package.metadata.prosa.hyper_srv]
proc = "server::proc::HyperServerProc"
settings = "server::proc::HyperServerSettings"
adaptor = ["server::adaptor::HelloHyperServerAdaptor"]

[package.metadata.prosa.hyper_cli]
proc = "client::proc::HyperClientProc"
settings = "client::proc::HyperClientSettings"
adaptor = []

[dependencies]
bytes = ">=1.11.1, < 2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = ">=1.48, < 2", features = ["macros", "net", "rt", "rt-multi-thread"] }
tracing = "0.1"
prosa-utils = "0.4"
prosa = "0.4"
aquamarine = "0.6"
url = { version = "2", features = ["serde"] }

opentelemetry = { version = "0.31", features = ["metrics", "trace", "logs"] }

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
openssl = ">=0.10.75, < 0.11"
reqwest = { version = "0.13" }
config = { version = "0.15", default-features = false, features = ["toml", "json", "yaml", "json5", "convert-case", "async"] }
clap = "4"
